--- a/photography.html
+++ b/photography.html
@@ -70,7 +70,7 @@
 
         <div id="collapseit" class="collapse navbar-collapse">
           <ul>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="index.html">ABOUT</a></li>
             <li class="dropdown">
                 <a href="portfolio.html">PORTFOLIO</a>
                 <div class="dropdown-content dropstyle">
