--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!-- <img src="images/MP.jpg" id="logomenu"/> -->
             <img src="images/MP.jpg" id="logomenu" />
             <li class="dropdown">
-              <a href="services.html" class="text">SERVICES</a>
+              <a class="text">SERVICES</a>
               <div class="dropdown-content">
                   <a href="webdesign.html" class="text">web design</a>
                   <a href="photography.html" class="text">photography</a>
