--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul>
             <li><a href="index.html">ABOUT</a></li>
             <li class="dropdown">
-                <a href="portfolio.html">PORTFOLIO</a>
+                <a href="#">PORTFOLIO</a>
                 <div class="dropdown-content dropstyle">
                     <a href="webdesign.html" class="text">web design</a>
                     <a href="photography.html" class="text">photography</a>
