--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul>
             <li><a href="index.html">ABOUT</a></li>
             <li class="dropdown">
-                <a href="#">PORTFOLIO</a>
+                <a href="">PORTFOLIO</a>
                 <div class="dropdown-content dropstyle">
                     <a href="webdesign.html" class="text">web design</a>
                     <a href="photography.html" class="text">photography</a>
@@ -81,7 +81,7 @@
             <!-- <img src="images/MP.jpg" id="logomenu"/> -->
             <img src="images/MP.jpg" id="logomenu" />
             <li class="dropdown">
-              <a class="text">SERVICES</a>
+              <a href="" class="text">SERVICES</a>
               <div class="dropdown-content">
                   <a href="webdesign.html" class="text">web design</a>
                   <a href="photography.html" class="text">photography</a>
