--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
     <div class="container">
                 <div class="col-md-12">
                       <p id="textinprogress">
-                            Please send me an email at the following <a href="marius.pernea.13@ucl.ac.uk"><u><b>email address</b></u></a>.
+                            Please send me an email at the following <a href="mailto:marius.pernea.13@ucl.ac.uk"><u><b>email address</b></u></a>.
                       </p>
                 </div>
                 <div class="push"></div>
