--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img src="images/pp.jpg" id="profilepic" />
                 Welcome to my website! I am a fourth year medical student at University College London, currently undertaking my clinical
                 studies. In 2016, I have obtained my BSc degree in "Medical Physics and Bioengineering" with
-                First-Class Honours.<br><br>
+                First-Class Honousdsssssrs.<br><br>
                 I am offering a variety of services, which you can find under the Services section
                 on this website and include web design, photography and tutoring a wide range of topics, including maths, physics, computer science and others.
                 <br><br>
