--- a/webdesign.html
+++ b/webdesign.html
@@ -96,15 +96,18 @@
     </nav>
   </div>
 
-    <div class="container">
+    <div class="container" >
+      <div class="row">
+        <div class="col-md-4" id="marginmedicason1">
+            <a href="http://www.medicason.ro" target="_blank"><img src="images/MEDICASON.png" class="img-responsive" id="medicason"/></a>
+        </div>
+        <div class="col-md-4" id="marginmedicason2">
+            <a href="http://www.medicason.ro" target="_blank"><img src="images/SWEETNAM.png" class="img-responsive" id="sweetnam"/></a>
+        </div>
+      </div>
 
 
-                <div class="col-md-12">
-                    <p id="textinprogress">
-                        Work in progress.
-                        <br><br>
-                    </p>
-                </div>
+
     </div>
 
 
